--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -108,3 +108,9 @@ p {
 .purple-text {
   color: var(--purple);
 }
+
+@media (min-width:700px){
+  nav {
+    justify-content: space-between;
+  }
+}
