--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -11,16 +11,22 @@
   --textAlign: center;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+}
 img {
   max-width: 100%;
 }
 
 h1 {
   font-size: calc(var(--gutter) * 1.5);
+  text-align: center;
 }
 
 p {
   padding: 0 var(--gutter);
+  text-align: center;
 }
 
 .menu {
@@ -67,7 +73,7 @@ p {
   border-right: var(--styledBorder);
   border-bottom: var(--styledBorder);
   background-color: var(--cardColor);
-  padding: calc(var(--gutter) * 3.75) calc(var(--gutter)* 2.1875);
+  padding: calc(var(--gutter) * 3.75) calc(var(--gutter) * 2.1875);
   border-radius: var(--radius);
   text-align: var(--textAlign);
   box-shadow: var(--styledShadow);
@@ -107,4 +113,7 @@ p {
 
 .purple-text {
   color: var(--purple);
+}
+
+@media screen (max-width: 700px) {
 }
