--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -32,6 +32,7 @@ p {
   margin: 0;
   margin-top: calc(var(--gutter) * 5);
   margin-bottom: calc(var(--gutter) * -0.3125);
+  display: none;
 }
 
 .description {
@@ -55,6 +56,8 @@ p {
   margin-top: calc(var(--gutter) * -2);
   border-radius: var(--radius);
   padding: 0 10%;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .skills--title {
@@ -118,5 +121,14 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .desktop{
+    display: block;
+  }
+
+  .skills {
+    display: flex;
+    justify-content: center;
   }
 }
