--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -109,6 +109,10 @@ p {
   color: var(--purple);
 }
 
+.disabled {
+  opacity: 0.5;
+}
+
 @media screen and (min-width: 700px) {
   nav {
     display: flex;
@@ -128,6 +132,10 @@ p {
     display: flex;
     justify-content: center;
     flex-direction: row-reverse;
+  }
+
+  .allofthebox {
+    display: flex;
   }
 }
 
