finish step 7 &8 in part 2

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -99,6 +99,10 @@ p {
   color: var(--purple);
 }
 
+.disabled {
+  opacity: 0.33;
+}
+
 .box {
   width: 25%;
   padding: calc(var(--gutter) * 2);
@@ -131,5 +135,8 @@ p {
     display: flex;
     justify-content: center;
     flex-direction: row-reverse;
+  }
+  .projects {
+    display: flex;
   }
 }
