centrage avatar et image bureau + responsive inclus

--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -38,6 +38,9 @@ p {
   margin: 0;
   margin-top: calc(var(--gutter) * 5);
   margin-bottom: calc(var(--gutter) * -0.3125);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .description {
