--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -67,7 +67,7 @@ p {
   border-right: var(--styledBorder);
   border-bottom: var(--styledBorder);
   background-color: var(--cardColor);
-  padding: calc(var(--gutter) * 3.75) calc(var(--gutter)* 2.1875);
+  padding: calc(var(--gutter) * 3.75) calc(var(--gutter) * 2.1875);
   border-radius: var(--radius);
   text-align: var(--textAlign);
   box-shadow: var(--styledShadow);
@@ -107,4 +107,68 @@ p {
 
 .purple-text {
   color: var(--purple);
+}
+/* nav bar */
+header nav {
+  display: flex;
+  justify-content: space-between;
+}
+header nav ul li a {
+  color: var(--purple);
+}
+/* section 1 */
+.section-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+/* sills section */
+.skills-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+/* .column.item-1 {
+  grid-column: 2;
+}
+.column.item-2 {
+  grid-column: 1;
+} */
+.skills--title {
+  text-align: center;
+}
+/* recent work */
+.projects h2,
+.projects p {
+  text-align: center;
+}
+.projects-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.projects-flex .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.projects-flex .box {
+  width: 30%;
+  margin: 10px 0;
+  box-sizing: border-box;
+}
+/* media query section */
+@media (max-width: 700px) {
+  .desktop-img {
+    display: none;
+  }
+  /* skills */
+  .skills-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .projects-flex .box {
+    width: 80%;
+  }
 }
