--- a/site/css/home.css
+++ b/site/css/home.css
@@ -7,7 +7,7 @@ header nav ul {
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  align-items: center;
+  align-items: flex-end;
 }
 
 main {
