--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -20,6 +20,10 @@
 		flex-direction: column;
 		align-items: center;
 	}
+  .desktop {
+    display: flex;
+    justify-content: center;
+  }
 	.skills {
 		display: flex;
 		justify-content: space-around;
