--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -36,6 +36,7 @@ p {
 
 
 .desktop {
+  display: none;
   margin: 0;
   margin-top: calc(var(--gutter) * 5);
   margin-bottom: calc(var(--gutter) * -0.3125);
@@ -119,4 +120,11 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
