--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -109,9 +109,50 @@ p {
 	color: var(--purple);
 }
 
-/* media= "(min-width: 700 px)" */
+.disabled {
+	opacity: 0.5;
+}
 
-header nav {
-	display: flex;
-	justify-content: space-between;
+/* for desktop view */
+
+@media only screen and (min-width: 700px) {
+	header nav {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.top-main {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.column-skills {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: center;
+		gap: 2em; /* pour séparer les deux cartes*/
+		padding-top: 5em; /* pour afficher le titre cahcé*/
+	}
+
+	.projects {
+		text-align: center;
+	}
+	.projects-boxes {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+}
+
+/* for tablet and mobile view */
+
+@media only screen and (max-width: 700px) {
+	.desktop {
+		display: none;
+	}
+	.column-skills {
+		display: flex;
+		flex-direction: column-reverse;
+	}
 }
