--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -15,6 +15,19 @@ img {
   max-width: 100%;
 }
 
+nav {
+  display: flex;
+
+  justify-content: space-between;
+}
+
+section.Presentation_block {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
+
 h1 {
   font-size: calc(var(--gutter) * 1.5);
 }
@@ -67,12 +80,16 @@ p {
   border-right: var(--styledBorder);
   border-bottom: var(--styledBorder);
   background-color: var(--cardColor);
-  padding: calc(var(--gutter) * 3.75) calc(var(--gutter)* 2.1875);
+  padding: calc(var(--gutter) * 3.75) calc(var(--gutter) * 2.1875);
   border-radius: var(--radius);
   text-align: var(--textAlign);
   box-shadow: var(--styledShadow);
 }
 
+.Container {
+  display: flex;
+  justify-content: center;
+}
 .column:first-of-type {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
