--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -1,3 +1,10 @@
+@media screen and (min-width: 700px) {
+  nav {
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
 :root {
   --radius: 12px;
 
@@ -67,7 +74,7 @@ p {
   border-right: var(--styledBorder);
   border-bottom: var(--styledBorder);
   background-color: var(--cardColor);
-  padding: calc(var(--gutter) * 3.75) calc(var(--gutter)* 2.1875);
+  padding: calc(var(--gutter) * 3.75) calc(var(--gutter) * 2.1875);
   border-radius: var(--radius);
   text-align: var(--textAlign);
   box-shadow: var(--styledShadow);
