--- a/site/css/portfolio.css
+++ b/site/css/portfolio.css
@@ -3,6 +3,13 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  #firstbanner {
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
+    text-align: center;
+  }
 }
 
 :root {
